20180821	DECstation 5000/125 "3MIN" mode has been broken for quite
		a while; attempting to rewrite/resurrect it.
20180822	Rewrote/refactored enough of the dec_ioasic code to make the
		5000/125's original PROM output its first boot messages again
		(and NetBSD/pmax and OpenBSD/pmax too).
20180823	Continuing on making 5000/125 emulation work again: rewriting
		the interrupt code for the scc serial controller, and
		connecting TURBOchannel graphics cards.
		Fixing the LK201 keyboard self-test codes so that the 5000/125
		PROM doesn't complain.

==============  RELEASE 0.6.0.2  ==============

20180910	Running the SGI O2 PROM works a little bit again, with some
		hacks (updating the documentation).
20180917	OpenBSD/landisk 6.3 guest OS install instruction update.
20180918	Fixing a regression bug which was introduced September 2012
		(svn r5805), regarding shifted immediate values, which caused
		OpenBSD/cats to fail during install.
20180920	Making ARM disassembly show THUMB instructions, if the lowest
		bit of the address is 1. (They can not be executed yet though.)
		Fixing broken "print" command. Oops.
		Implement some more THUMB disassembly.
		Fail rather than silently treating ARM instructions beginning
		with 0xf as nops.
		Allow the emulator to start in THUMB mode (lowest pc bit set).
20180921        Continuing on ARM THUMB disassembly.
		Beginning to implement very slow THUMB interpretation (not
		dyntrans). Horrible performance-wise, but better than nothing.
20180924	Oops, forgot to add machine_rpi.cc back in 20131006.
20180925	Cleaning up some more files on make clean_all. Thanks to
		Göran Weinholt for noticing.
20180927	Fixing big-endian ARM loads/stores (except perhaps double-word
		loads and stores); probably slows everything down a bit.
20181001	Continuing on the slow THUMB instruction interpretation.
20181008	Disk images added using -d for SGI modes are now SCSI, not IDE.
		Importing newer crimereg.h and crmfbreg.h from NetBSD.